--- a/index.html
+++ b/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🗒️Lista Tareas</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-    <link rel="stylesheet" href="estilosCSS/style.css">
-    <script defer src="javaScript/main.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cotizador de Viajes_Ruiz</title>
+    <link rel="stylesheet" href="./estilos/style.css" />
+    <link rel="stylesheet" href="./librerias/toastify.min.css" />
+    <script src="./librerias/toastify.min.js"></script>
+    <script defer type="module" src="./script/main.js"></script>
+    <script src="./librerias/sweetalert2.all.min.js"></script>
 </head>
+    <body>
+    <div class="container">
+        <h1>Cotizador de Viajes</h1>
 
-<body>
-    
-    <header class="container" id="margin">
-        <h1>Lista de Tareas📝</h1>
-    </header>
-    <main class="container">
-        <form id="formTask">
-            <input id="inputTask" type="text" name="inputTask" placeholder="Ingrese su Tarea">
-            <input type="submit" value="Enviar Tarea">
+        <form id="formCotizador">
+        <label for="destino">Destino:</label>
+        <select id="destino" required></select>
+
+        <label for="duracion">Duración (días):</label>
+        <input type="number" id="duracion" min="1" value="5" required />
+
+        <label>Extras:</label><br>
+        <div>
+            <input type="checkbox" id="hotel"/> <label for="hotel">Hotel</label
+            ><br />
+            <input type="checkbox" id="excursiones" />
+            <label for="excursiones">Excursiones</label><br />
+            <input type="checkbox" id="transporte" />
+            <label for="transporte">Transporte</label>
+        </div>
+
+        <label for="moneda">Moneda:</label>
+        <select id="moneda">
+            <option value="USD" selected>USD</option>
+            <option value="EUR">EUR</option>
+            <option value="ARS">ARS</option>
+            <option value="COP">COP</option>
+        </select>
+
+        <button type="submit">Calcular</button>
         </form>
 
-        <ul class="taskContainer grid">
-        </ul>
-    </main>
+        <div id="resultadoCotizacion" class="resultado"></div>
+    </div>
 
-    
-</body>
-
+    </body>
 </html>
